feat: Standardize backend port to 8080, switch to Redis URL configuration, enhance database initialization, and integrate Cloudflare Access Service Tokens.

--- a/.env.homeserver.example
+++ b/.env.homeserver.example
@@ -69,6 +69,7 @@ CLOUDFLARE_TUNNEL_TOKEN=your-tunnel-token
 # =============================================================================
 REDIS_HOST=redis
 REDIS_PORT=6379
+REDIS_URL=redis://redis:6379/0
 
 # =============================================================================
 # Logging & Security
