fix: Remove `nvidia-smi` check from the health endpoint and GPU support instructions from the homeserver example environment file.

--- a/inference-service/.env.example
+++ b/inference-service/.env.example
@@ -33,7 +33,7 @@ LLAMACPP_FILENAME=Q3_K_S-2.66bow
 # LLAMACPP_MODEL_PATH=models/qwen.gguf # ローカルファイルを使用する場合
 LLAMACPP_CTX_SIZE=4096
 LLAMACPP_THREADS=4
-LLAMACPP_GPU_LAYERS=0
+LLAMACPP_GPU_LAYERS=0 # Not GPU, only CPU Inference
 
 # Llama-cpp (LLM) 最適化設定 (Intel i7-9750H用)
 LLAMACPP_THREADS=4
