refactor: Remove Cloud Run module and environment-specific Terraform configurations, consolidating infrastructure.

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -57,25 +57,6 @@ vars:
       sh: 'python3 -c ''import json; print(json.load(open("config/resources.json"))["build"]["machine_type"])''',
     }
 
-  # Staging Deployment Variables
-  # Staging Deployment Variables
-  STG_SECRET_ENV: "GEMINI_API_KEY=GEMINI_API_KEY:latest,FIREBASE_API_KEY=FIREBASE_API_KEY:latest,FIREBASE_AUTH_DOMAIN=FIREBASE_AUTH_DOMAIN:latest,FIREBASE_PROJECT_ID=FIREBASE_PROJECT_ID:latest,FIREBASE_STORAGE_BUCKET=FIREBASE_STORAGE_BUCKET:latest,FIREBASE_MESSAGING_SENDER_ID=FIREBASE_MESSAGING_SENDER_ID:latest,FIREBASE_APP_ID=FIREBASE_APP_ID:latest,FIREBASE_MEASUREMENT_ID=FIREBASE_MEASUREMENT_ID:latest,/secrets/sa-key=paperterrace-sa-key:latest"
-
-  STG_BE_ENV_VARS: 'AI_PROVIDER={{.AI_PROVIDER | default "gemini"}},OCR_MODEL={{.OCR_MODEL | default "gemini-1.5-flash"}},LOG_LEVEL={{.LOG_LEVEL | default "INFO"}},ACCESS_LOG_LEVEL={{.ACCESS_LOG_LEVEL | default "INFO"}},INFERENCE_SERVICE_TIMEOUT={{.INFERENCE_SERVICE_TIMEOUT | default "200"}},SKIP_INFERENCE_SERVICE_WARMUP={{.SKIP_INFERENCE_SERVICE_WARMUP | default "false"}},STORAGE_TYPE={{.STORAGE_TYPE | default "gcs"}},GCS_BUCKET_NAME={{.GCS_BUCKET_NAME | default "paperterrace-papers"}},GOOGLE_APPLICATION_CREDENTIALS=/secrets/sa-key'
-
-  STG_INF_ENV_VARS: 'LOG_LEVEL={{.LOG_LEVEL | default "INFO"}},DEV_MODE=false,SKIP_MODEL_LOADING=false,LOCAL_MODEL_PATH={{.LOCAL_MODEL_PATH | default "/app/models/m2m100_ct2"}},TRANSLATION_BEAM_SIZE={{.TRANSLATION_BEAM_SIZE | default "5"}},TRANSLATION_REPETITION_PENALTY={{.TRANSLATION_REPETITION_PENALTY | default "1.4"}},TRANSLATION_NO_REPEAT_NGRAM_SIZE={{.TRANSLATION_NO_REPEAT_NGRAM_SIZE | default "3"}},LAYOUT_THRESHOLD={{.LAYOUT_THRESHOLD | default 0.9}},BATCH_PARALLEL_WORKERS={{.INF_STG_WORKERS}}'
-
-  # Staging Resource Configurations
-  BE_STG_MIN_INSTANCES: '{{.BE_STG_MIN_INSTANCES | default "0"}}'
-  BE_STG_MAX_INSTANCES: '{{.BE_STG_MAX_INSTANCES | default "20"}}'
-  BE_STG_CONCURRENCY: '{{.BE_STG_CONCURRENCY | default "80"}}'
-  BE_STG_TIMEOUT: '{{.BE_STG_TIMEOUT | default "300"}}'
-
-  INF_STG_MIN_INSTANCES: '{{.INF_STG_MIN_INSTANCES | default "0"}}'
-  INF_STG_MAX_INSTANCES: '{{.INF_STG_MAX_INSTANCES | default "10"}}'
-  INF_STG_CONCURRENCY: '{{.INF_STG_CONCURRENCY | default "10"}}'
-  INF_STG_TIMEOUT: '{{.INF_STG_TIMEOUT | default "300"}}'
-
 tasks:
   # ============================================================================
   # Development Tasks
@@ -205,17 +186,6 @@ tasks:
   # Production Tasks
   # ============================================================================
 
-  deploy:
-    desc: "Deploy to production"
-    cmds:
-      - echo "🚀 Deploying to production..."
-      - ./scripts/deployment/deploy.sh
-
-  deploy:fast:
-    desc: "Fast deploy (skip infrastructure checks)"
-    cmds:
-      - ./scripts/deployment/deploy.sh --skip-infra
-
   # ============================================================================
   # Database Tasks
   # ============================================================================
@@ -260,291 +230,9 @@ tasks:
   # Staging Environment Tasks
   # ============================================================================
 
-  staging:deploy:servicea:
-    desc: "Deploy backend to staging environment"
-    cmds:
-      - echo "🚀 Deploying backend to staging..."
-      - gcloud auth configure-docker {{.REGION}}-docker.pkg.dev --quiet
-      - docker build --platform linux/amd64 -f backend/Dockerfile -t {{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/app:staging .
-      - docker push {{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/app:staging
-      - |
-        SERVICEB_URL=$(gcloud run services describe paperterrace-inference-staging --region {{.REGION}} --format="value(status.url)" 2>/dev/null || echo "")
-        if [ -z "$SERVICEB_URL" ]; then
-          echo "⚠️ ServiceB not found. Deploy inference service first with: task staging:deploy:serviceb"
-          SERVICEB_URL="https://paperterrace-inference-staging-placeholder.run.app"
-        fi
-
-        gcloud run deploy paperterrace-staging \
-          --image {{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/app:staging \
-          --region {{.REGION}} \
-          --allow-unauthenticated \
-          --service-account paperterrace-sa@{{.PROJECT_ID}}.iam.gserviceaccount.com \
-          --memory {{.BE_STG_MEM}} \
-          --cpu {{.BE_STG_CPU}} \
-          --min-instances {{.BE_STG_MIN_INSTANCES}} \
-          --max-instances {{.BE_STG_MAX_INSTANCES}} \
-          --concurrency {{.BE_STG_CONCURRENCY}} \
-          --timeout {{.BE_STG_TIMEOUT}} \
-          --set-secrets "{{.STG_SECRET_ENV}}" \
-          --set-env-vars "{{.STG_BE_ENV_VARS}},INFERENCE_SERVICE_URL=$SERVICEB_URL"
-      - echo "✅ Backend deployed to staging!"
-      - task: staging:urls
-
-  staging:deploy:serviceb:
-    desc: "Deploy inference service to staging"
-    cmds:
-      - echo "🔨 Building and deploying inference service..."
-      - gcloud auth configure-docker {{.REGION}}-docker.pkg.dev --quiet
-      - docker build --platform linux/amd64 -f inference-service/Dockerfile -t {{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/inference:staging .
-      - docker push {{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/inference:staging
-      - |
-        gcloud run deploy paperterrace-inference-staging \
-          --image {{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/inference:staging \
-          --region {{.REGION}} \
-          --allow-unauthenticated \
-          --memory {{.INF_STG_MEM}} \
-          --cpu {{.INF_STG_CPU}} \
-          --min-instances {{.INF_STG_MIN_INSTANCES}} \
-          --max-instances {{.INF_STG_MAX_INSTANCES}} \
-          --concurrency {{.INF_STG_CONCURRENCY}} \
-          --timeout {{.INF_STG_TIMEOUT}} \
-          --set-env-vars "{{.STG_INF_ENV_VARS}}"
-      - echo "✅ Inference service deployed to staging!"
-      - task: staging:urls
-
-  staging:deploy:
-    desc: "Deploy both backend and inference to staging"
-    cmds:
-      - echo "🚀 Deploying all services to staging..."
-      - task: staging:deploy:serviceb
-      - echo "⏳ Waiting 10 seconds for inference service to be ready..."
-      - sleep 10
-      - task: staging:deploy:servicea
-      - echo "🎉 All services deployed to staging!"
-
-  staging:test:
-    desc: "Run comprehensive staging tests"
-    cmds:
-      - echo "🧪 Running staging tests..."
-      - task: staging:health
-      - task: staging:test:translation
-      - echo "✅ All staging tests passed!"
-
-  staging:test:translation:
-    desc: "Test translation functionality"
-    cmds:
-      - echo "🔤 Testing translation..."
-      - |
-        SERVICEB_URL=$(gcloud run services describe paperterrace-inference-staging --region {{.REGION}} --format="value(status.url)" 2>/dev/null)
-        if [ -z "$SERVICEB_URL" ]; then
-          echo "❌ Inference service not found. Deploy first with: task staging:deploy:serviceb"
-          exit 1
-        fi
-
-        echo "Testing translation endpoint: $SERVICEB_URL/api/v1/translate"
-
-        RESPONSE=$(curl -s -X POST "$SERVICEB_URL/api/v1/translate" \
-          -H "Content-Type: application/json" \
-          -d '{"text": "Hello world",  "target_lang": "ja"}' \
-          -w "\n%{http_code}")
-
-        HTTP_CODE=$(echo "$RESPONSE" | tail -n1)
-        BODY=$(echo "$RESPONSE" | head -n-1)
-
-        echo "HTTP Status: $HTTP_CODE"
-        echo "Response: $BODY"
-
-        if [ "$HTTP_CODE" = "200" ]; then
-          SUCCESS=$(echo "$BODY" | grep -o '"success":[^,}]*' | cut -d':' -f2)
-          if [ "$SUCCESS" = "true" ]; then
-            TRANSLATION=$(echo "$BODY" | grep -o '"translation":"[^"]*"' | cut -d'"' -f4)
-            echo "✅ Translation successful: Hello world → $TRANSLATION"
-          else
-            echo "❌ Translation returned success=false"
-            exit 1
-          fi
-        else
-          echo "❌ Translation test failed with HTTP $HTTP_CODE"
-          exit 1
-        fi
-
-  staging:test:upload:
-    desc: "Test PDF upload with test.pdf"
-    cmds:
-      - |
-        STAGING_URL=$(gcloud run services describe paperterrace-staging --region {{.REGION}} --format="value(status.url)" 2>/dev/null)
-        if [ -z "$STAGING_URL" ]; then
-          echo "❌ Staging service not found. Deploy first with: task staging:deploy"
-          exit 1
-        fi
-
-        echo "📄 Testing PDF upload to: $STAGING_URL"
-
-        # Check if test.pdf exists
-        if [ ! -f "frontend/public/test.pdf" ]; then
-          echo "❌ test.pdf not found in frontend/public/"
-          exit 1
-        fi
-
-        # Test health endpoint first
-        echo "🔍 Testing health endpoint..."
-        curl -f "$STAGING_URL/api/health" || (echo "❌ Health check failed" && exit 1)
-
-        # Test PDF upload with correct endpoint
-        echo "📤 Uploading test.pdf..."
-        RESPONSE=$(curl -s -w "%{http_code}" -o /tmp/upload_response.json -X POST "$STAGING_URL/api/analyze-pdf-json" \
-          -F "file=@frontend/public/test.pdf" \
-          -F "session_id=test-session-$(date +%s)" \
-          -F "lang=ja")
-
-        echo "HTTP Status: $RESPONSE"
-        echo "Response:"
-        cat /tmp/upload_response.json
-
-        # Check if upload was successful (HTTP 200)
-        if [ "$RESPONSE" = "200" ]; then
-          TASK_ID=$(cat /tmp/upload_response.json | grep -o '"task_id":"[^"]*"' | cut -d'"' -f4)
-          if [ -n "$TASK_ID" ]; then
-            echo "✅ PDF upload successful! Task ID: $TASK_ID"
-            echo "🔄 Stream URL: $STAGING_URL/api/stream/$TASK_ID"
-          else
-            echo "⚠️ Upload response missing task_id"
-          fi
-        else
-          echo "❌ PDF upload failed with HTTP $RESPONSE"
-          exit 1
-        fi
-
-  staging:health:
-    desc: "Check staging services health"
-    cmds:
-      - echo "🔍 Checking staging services health..."
-      - |
-        # Check Backend
-        BACKEND_URL=$(gcloud run services describe paperterrace-staging --region {{.REGION}} --format="value(status.url)" 2>/dev/null)
-        if [ -n "$BACKEND_URL" ]; then
-          echo "Backend: $BACKEND_URL"
-          if curl -f -s "$BACKEND_URL/api/health" > /dev/null 2>&1; then
-            echo "✅ Backend healthy"
-          else
-            echo "❌ Backend unhealthy"
-          fi
-        else
-          echo "⚠️ Backend not deployed"
-        fi
-
-        # Check Inference Service
-        INFERENCE_URL=$(gcloud run services describe paperterrace-inference-staging --region {{.REGION}} --format="value(status.url)" 2>/dev/null)
-        if [ -n "$INFERENCE_URL" ]; then
-          echo "Inference: $INFERENCE_URL"
-          if curl -f -s "$INFERENCE_URL/health" > /dev/null 2>&1; then
-            echo "✅ Inference service healthy"
-          else
-            echo "❌ Inference service unhealthy"
-          fi
-        else
-          echo "⚠️ Inference service not deployed"
-        fi
-
-  staging:logs:
-    desc: "Show combined staging logs"
-    cmds:
-      - echo "📋 Staging combined logs (last 50 entries):"
-      - gcloud run services logs read paperterrace-staging --limit=50 --region {{.REGION}} --format="table(receiveTimestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
-
-  staging:logs:servicea:
-    desc: "Show backend logs (Service A)"
-    cmds:
-      - echo "📋 Backend logs (last 50 entries) -> logs/servicea.log"
-      - mkdir -p logs
-      - gcloud logging read 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-staging"' --limit=50 --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)" | tee -a logs/servicea.log
-
-  staging:logs:serviceb:
-    desc: "Show inference service logs (Service B)"
-    cmds:
-      - echo "📋 Inference service logs (last 50 entries) -> logs/serviceb.log"
-      - mkdir -p logs
-      - gcloud logging read 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-inference-staging"' --limit=50 --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)" | tee -a logs/serviceb.log
-
-  staging:logs:tail:servicea:
-    desc: "Tail backend logs in real-time"
-    cmds:
-      - echo "📋 Tailing backend logs (Ctrl+C to stop)..."
-      - gcloud logging tail 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-staging"' --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
-
-  staging:logs:tail:serviceb:
-    desc: "Tail inference service logs in real-time"
-    cmds:
-      - echo "📋 Tailing inference service logs (Ctrl+C to stop)..."
-      - gcloud logging tail 'resource.type="cloud_run_revision" AND resource.labels.service_name="paperterrace-inference-staging"' --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
-
-  staging:logs:errors:
-    desc: "Show only error logs from staging"
-    cmds:
-      - echo "🔴 Error logs from staging:"
-      - gcloud logging read 'resource.type="cloud_run_revision"\
-        AND (resource.labels.service_name="paperterrace-staging"\
-        OR resource.labels.service_name="paperterrace-inference-staging")\
-        AND severity>=ERROR' \
-        --limit=20 --format="table(timestamp.date(tz='Asia/Tokyo'):label=TIME, \
-        resource.labels.service_name:label=SERVICE, severity, textPayload, \
-        jsonPayload.event:label=MESSAGE)" --order=asc
-
-  staging:deploy:debug:
-    desc: "Deploy staging services with DEBUG log level"
-    cmds:
-      - echo "⚙️ Setting LOG_LEVEL=DEBUG for staging services..."
-      - gcloud run services update paperterrace-staging --region {{.REGION}} --update-env-vars LOG_LEVEL=DEBUG,ACCESS_LOG_LEVEL=DEBUG
-      - gcloud run services update paperterrace-inference-staging --region {{.REGION}} --update-env-vars LOG_LEVEL=DEBUG
-
-  staging:urls:
-    desc: "Show staging service URLs"
-    cmds:
-      - echo "🔗 Staging Service URLs:"
-      - |
-        BACKEND_URL=$(gcloud run services describe paperterrace-staging --region {{.REGION}} --format="value(status.url)" 2>/dev/null)
-        INFERENCE_URL=$(gcloud run services describe paperterrace-inference-staging --region {{.REGION}} --format="value(status.url)" 2>/dev/null)
-
-        if [ -n "$BACKEND_URL" ]; then
-          echo "Backend: $BACKEND_URL"
-        else
-          echo "Backend: Not deployed"
-        fi
-
-        if [ -n "$INFERENCE_URL" ]; then
-          echo "Inference: $INFERENCE_URL"
-        else
-          echo "Inference: Not deployed"
-        fi
-
-  staging:stop:
-    desc: "Stop staging services"
-    cmds:
-      - echo "🛑 Stopping staging services..."
-      - gcloud run services delete paperterrace-staging --region {{.REGION}} --quiet 2>/dev/null || echo "Backend already stopped"
-      - gcloud run services delete paperterrace-inference-staging --region {{.REGION}} --quiet 2>/dev/null || echo "Inference service already stopped"
-      - echo "✅ Staging services stopped!"
-
   # ============================================================================
-  # Monitoring & Logs
+  # Infrastructure Tasks
   # ============================================================================
-
-  logs:prod:
-    desc: "Show production logs"
-    cmds:
-      - echo "📋 Production combined logs (last 100 entries):"
-      - gcloud run services logs read paperterrace --limit=100 --region {{.REGION}} --format="table(receiveTimestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
-
-  logs:prod:tail:
-    desc: "Tail production logs"
-    cmds:
-      - echo "📋 Tailing production logs (Ctrl+C to stop)..."
-      - gcloud run services logs tail paperterrace --region {{.REGION}} --format="table(receiveTimestamp.date(tz='Asia/Tokyo'):label=TIME, severity, textPayload, jsonPayload.event:label=MESSAGE)"
-
-  logs:errors:
-    desc: "Show error logs"
-    cmds:
-      - gcloud logging read 'resource.type="cloud_run_revision" AND severity>=ERROR' --limit=50 --format="table(timestamp,severity,resource.labels.service_name,textPayload)" 2>/dev/null || echo "No error logs found"
 
   # ============================================================================
   # Infrastructure Tasks
@@ -555,12 +243,6 @@ tasks:
     cmds:
       - echo "🔧 Initializing Terraform for production..."
       - unset GOOGLE_APPLICATION_CREDENTIALS && cd infrastructure/environments/production && terraform init
-
-  infra:init:staging:
-    desc: "Initialize Terraform for staging"
-    cmds:
-      - echo "🔧 Initializing Terraform for staging..."
-      - unset GOOGLE_APPLICATION_CREDENTIALS && cd infrastructure/environments/staging && terraform init
 
   infra:import:production:
     desc: "Import existing GCP resources into Terraform state (production)"
@@ -583,37 +265,9 @@ tasks:
       - echo "🚀 Applying Terraform changes for production..."
       - unset GOOGLE_APPLICATION_CREDENTIALS && cd infrastructure/environments/production && terraform apply -var="project_id={{.PROJECT_ID}}" -var="region={{.REGION}}" -var="gemini_api_key=${GEMINI_API_KEY}" -var="db_password=${DB_PASSWORD}" -var="image_url={{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/app:latest"
 
-  infra:plan:staging:
-    desc: "Plan Terraform changes for staging"
-    cmds:
-      - echo "📋 Planning Terraform changes for staging..."
-      - unset GOOGLE_APPLICATION_CREDENTIALS && cd infrastructure/environments/staging && terraform plan -var="project_id={{.PROJECT_ID}}" -var="region={{.REGION}}" -var="image_url={{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/app:staging"
-
-  infra:apply:staging:
-    desc: "Apply Terraform changes for staging"
-    cmds:
-      - echo "🚀 Applying Terraform changes for staging..."
-      - unset GOOGLE_APPLICATION_CREDENTIALS && cd infrastructure/environments/staging && terraform apply -var="project_id={{.PROJECT_ID}}" -var="region={{.REGION}}" -var="image_url={{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/app:staging"
-
-  infra:destroy:staging:
-    desc: "Destroy staging infrastructure"
-    cmds:
-      - echo "⚠️ Destroying staging infrastructure..."
-      - unset GOOGLE_APPLICATION_CREDENTIALS && cd infrastructure/environments/staging && terraform destroy -var="project_id={{.PROJECT_ID}}" -var="region={{.REGION}}" -var="image_url={{.REGION}}-docker.pkg.dev/{{.PROJECT_ID}}/paperterrace/app:staging"
-
   # ============================================================================
   # Utility Tasks
   # ============================================================================
-
-  iam:add:
-    desc: "Add public access to production service"
-    cmds:
-      - gcloud run services add-iam-policy-binding paperterrace --member="allUsers" --role="roles/run.invoker"
-
-  iam:remove:
-    desc: "Remove public access from production service"
-    cmds:
-      - gcloud run services remove-iam-policy-binding paperterrace --member="allUsers" --role="roles/run.invoker"
 
   cleanup:
     desc: "Clean up unused Docker images and containers"
@@ -781,10 +435,3 @@ tasks:
       - echo "Make sure you have tested thoroughly!"
       - echo "Update DNS to point to Cloudflare Pages"
       - echo "Monitor logs and metrics closely"
-
-  migrate:rollback:
-    desc: "Rollback to Cloud Run"
-    cmds:
-      - echo "🔄 Rolling back to Cloud Run..."
-      - echo "Revert DNS changes to point back to Cloud Run"
-      - echo "Monitor Cloud Run logs"
