refactor: Consolidate infrastructure, plans, and local configuration files into a new `local-files` directory.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-logs/
+
 *.tgz
 *.png
 *.jpg
@@ -12,7 +12,6 @@ infrastructure/k8s/
 __pycache__/
 *.py[codz]
 *$py.class
-migrations/
 *.pdf
 settings.json
 CLAUDE.md
@@ -24,13 +23,16 @@ config.ts
 
 # local
 *.toml
+infrastructure/
 !pyproject.toml
 !backend/pyproject.toml
 !inference-service/pyproject.toml
 !redis_provider/pyproject.toml
 !wrangler.toml
+logs/
 *tests/
 assets/
+migrations/
 *.db
 plans/
 
