--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -4,17 +4,17 @@ on:
   push:
     branches: [main, master]
     paths:
-      - 'terraform/**'
+      - "local-files/infrastructure/**"
   pull_request:
     branches: [main, master]
     paths:
-      - 'terraform/**'
+      - "local-files/infrastructure/**"
   workflow_dispatch:
     inputs:
       action:
-        description: 'Terraform action'
+        description: "Terraform action"
         required: true
-        default: 'plan'
+        default: "plan"
         type: choice
         options:
           - plan
@@ -23,7 +23,7 @@ on:
 
 env:
   TF_VERSION: "1.7.0"
-  WORKING_DIR: ./terraform
+  WORKING_DIR: ./local-files/infrastructure
 
 jobs:
   terraform-plan:
