--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,6 +8,9 @@ vars:
   PROJECT_ID: '{{.PROJECT_ID | default "gen-lang-client-0800253336"}}'
   REGION: '{{.REGION | default "asia-northeast1"}}'
   REGISTRY: '{{.REGISTRY | default "192.168.10.123:5000"}}'
+  ENV: '{{.ENV | default "main"}}'
+  NAMESPACE: '{{if eq .ENV "main"}}paperterrace{{else}}paperterrace-{{.ENV}}{{end}}'
+  RELEASE_NAME: '{{if eq .ENV "main"}}paperterrace{{else}}paperterrace-{{.ENV}}{{end}}'
 
   # Resource Configurations from JSON
   BE_CPU:
@@ -281,18 +284,6 @@ tasks:
   # Helm Deployment Tasks
   # ============================================================================
 
-  helm:deploy:
-    desc: "Deploy PaperTerrace using Helm"
-    cmds:
-      - echo "🚀 Deploying with Helm..."
-      - helm upgrade --install paperterrace ./local-files/infrastructure/helm/paperterrace --namespace paperterrace --create-namespace
-
-  helm:undeploy:
-    desc: "Undeploy PaperTerrace using Helm"
-    cmds:
-      - echo "🔥 Removing Helm release..."
-      - helm uninstall paperterrace --namespace paperterrace
-
   helm:lint:
     desc: "Lint Helm chart"
     cmds:
@@ -305,37 +296,32 @@ tasks:
   k3s:secrets:
     desc: "Setup K8s secrets on home server"
     cmds:
-      - ./local-files/scripts/create-secrets.sh
-
-  k3s:deploy:
-    desc: "Deploy all services to k3s using Helm"
-    cmds:
-      - task: helm:deploy
+      - ./local-files/scripts/create-secrets.sh {{.ENV}}
 
   k3s:status:
     desc: "Show status of k3s resources"
     cmds:
-      - kubectl get pods,svc,deploy -n paperterrace
+      - kubectl get pods,svc,deploy -n {{.NAMESPACE}}
 
   k3s:logs:backend:
     desc: "View backend logs in k3s"
     cmds:
-      - kubectl logs -f -l app=backend -n paperterrace
+      - kubectl logs -f -l app=backend -n {{.NAMESPACE}}
 
   k3s:logs:inference:
     desc: "View inference logs in k3s"
     cmds:
-      - kubectl logs -f -l app=inference -n paperterrace
+      - kubectl logs -f -l app=inference -n {{.NAMESPACE}}
 
   k3s:restart:backend:
     desc: "Restart backend in k3s"
     cmds:
-      - kubectl rollout restart deployment/backend -n paperterrace
+      - kubectl rollout restart deployment/backend -n {{.NAMESPACE}}
 
   k3s:restart:inference:
     desc: "Restart inference server in k3s"
     cmds:
-      - kubectl rollout restart deployment/inference -n paperterrace
+      - kubectl rollout restart deployment/inference -n {{.NAMESPACE}}
 
   k3s:restart:all:
     desc: "Restart all application services in k3s"
@@ -346,20 +332,20 @@ tasks:
   k3s:health:
     desc: "Check health of services in k3s"
     cmds:
-      - echo "🔍 Checking service health..."
+      - echo "🔍 Checking service health in {{.NAMESPACE}}..."
       - |
         echo "Backend:"
-        kubectl exec -n paperterrace deployment/backend -- curl -s http://localhost:8080/api/health || \
-        kubectl exec -n paperterrace deployment/backend -- python3 -c "import urllib.request; print(urllib.request.urlopen('http://localhost:8080/api/health').read().decode())" || \
+        kubectl exec -n {{.NAMESPACE}} deployment/backend -- curl -s http://localhost:8080/api/health || \
+        kubectl exec -n {{.NAMESPACE}} deployment/backend -- python3 -c "import urllib.request; print(urllib.request.urlopen('http://localhost:8080/api/health').read().decode())" || \
         echo "❌ Unhealthy"
         echo ""
         echo "Inference Server:"
-        kubectl exec -n paperterrace deployment/inference -- curl -s http://localhost:8080/health || \
-        kubectl exec -n paperterrace deployment/inference -- python3 -c "import urllib.request; print(urllib.request.urlopen('http://localhost:8080/health').read().decode())" || \
+        kubectl exec -n {{.NAMESPACE}} deployment/inference -- curl -s http://localhost:8080/health || \
+        kubectl exec -n {{.NAMESPACE}} deployment/inference -- python3 -c "import urllib.request; print(urllib.request.urlopen('http://localhost:8080/health').read().decode())" || \
         echo "❌ Unhealthy"
         echo ""
         echo "Redis:"
-        kubectl exec -n paperterrace statefulset/paperterrace-redis-master -- redis-cli ping || echo "❌ Unhealthy"
+        kubectl exec -n {{.NAMESPACE}} statefulset/{{.RELEASE_NAME}}-redis-master -- redis-cli ping || echo "❌ Unhealthy"
 
   homeserver:health:
     desc: "Check health of all services"
@@ -372,14 +358,6 @@ tasks:
       REGISTRY: "{{.REGISTRY}}"
     cmds:
       - ./local-files/scripts/build-images.sh
-
-  homeserver:deploy:
-    desc: "Full deployment to home server (k3s)"
-    cmds:
-      - task: homeserver:build
-      - task: k3s:secrets
-      - task: k3s:deploy
-      - echo "✅ Home server deployment complete!"
 
   homeserver:ps:
     desc: "Show status of all services"
@@ -398,12 +376,12 @@ tasks:
   cf:tunnel:start:
     desc: "Start Cloudflare Tunnel (k3s)"
     cmds:
-      - kubectl scale deployment/cloudflared --replicas=1 -n paperterrace
+      - kubectl scale deployment/cloudflared --replicas=1 -n {{.NAMESPACE}}
 
   cf:tunnel:logs:
     desc: "View Cloudflare Tunnel logs (k3s)"
     cmds:
-      - kubectl logs -f -l app=cloudflared -n paperterrace
+      - kubectl logs -f -l app=cloudflared -n {{.NAMESPACE}}
 
   cf:workers:install:
     desc: "Install all dependencies (including Workers/Frontend)"
@@ -415,30 +393,14 @@ tasks:
     cmds:
       - cd cloudflare-workers && npx wrangler dev
 
-  cf:workers:deploy:
-    desc: "Deploy Cloudflare Workers API Gateway"
-    cmds:
-      - cd cloudflare-workers && npx wrangler deploy
-
   cf:workers:secrets:
     desc: "Configure Cloudflare Workers secrets"
     cmds:
       - echo "Setting up Cloudflare Workers secrets..."
-      - echo "Run these commands manually:"
+      - echo "Run these commands manually (add --env dev if needed):"
       - echo "  npx wrangler secret put FIREBASE_PROJECT_ID"
       - echo "  npx wrangler secret put FIREBASE_CLIENT_EMAIL"
       - echo "  npx wrangler secret put FIREBASE_PRIVATE_KEY"
-
-  cf:pages:deploy:
-    desc: "Deploy frontend to Cloudflare Pages"
-    cmds:
-      - npm run build -w frontend
-      - npx wrangler pages deploy frontend/dist --project-name paperterrace
-
-  cf:deploy:
-    desc: "Deploy all Cloudflare services (Workers + Pages)"
-    cmds:
-      - ./local-files/scripts/deploy-cloudflare.sh
 
   # ============================================================================
   # Migration Tasks
