feat: Identify and log the layout analysis engine and add workspace build and test scripts to package.json.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "lint": "biome lint .",
     "format": "biome format --write .",
-    "check": "biome check --write ."
+    "check": "biome check --write .",
+    "build": "npm run build --workspaces --if-present",
+    "test": "npm test --workspaces --if-present"
   },
   "workspaces": [
     "frontend",
