--- a/infrastructure/helm/paperterrace/templates/backend.yaml
+++ b/infrastructure/helm/paperterrace/templates/backend.yaml
@@ -71,12 +71,16 @@ spec:
               port: {{ .Values.backend.service.port }}
             initialDelaySeconds: 60
             periodSeconds: 30
+            timeoutSeconds: 10
+            failureThreshold: 5
           readinessProbe:
             httpGet:
               path: /api/health
               port: {{ .Values.backend.service.port }}
             initialDelaySeconds: 30
             periodSeconds: 30
+            timeoutSeconds: 5
+            failureThreshold: 3
       volumes:
         - name: secrets
           secret:
