feat: redesign the login page with a modern user interface and improved visual elements.

--- a/biome.json
+++ b/biome.json
@@ -41,6 +41,9 @@
     }
   },
   "css": {
+    "parser": {
+      "tailwindDirectives": true
+    },
     "linter": {
       "enabled": false
     }
